--- a/css/main.css
+++ b/css/main.css
@@ -2389,7 +2389,9 @@ iframe{
   background: url(../images/left.png) , rgba(255, 255, 255, 0.6) !important;
 }
 .lSSlideOuter .lightSlider > *, .lSSlideOuter .lSGallery li{
-  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 
@@ -3225,16 +3227,16 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   }
 }
 
-@media only screen and (min-width: 1400px) { /* PC */ 
-  .condo-card{ 
-    width: 380px; 
-  }
-}
-
-@media only screen and (min-width: 1900px) { /* PC */ 
+/* @media only screen and (min-width: 1900px) {  
   .condo-card{ 
     width: 402px; 
   }
 }
+@media only screen and (min-width: 1400px) {  
+  .condo-card{ 
+    width: 402px; 
+  }
+} */
+
 
   
