--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,7 @@ header nav .navbar-nav .nav-item:hover .nav-link{
   margin-bottom: 30px;
 }
 .condo-card{
+  width: 402px;
   margin-left: 20px;
   margin-right: 20px; 
   height: 567px;
