--- a/css/main.css
+++ b/css/main.css
@@ -403,6 +403,12 @@ header nav .navbar-nav .nav-item:hover .nav-link{
   height: 230px;
   border-radius: 10px; 
 }
+.category-sec .condo-card .cover{
+  height: 200px; 
+}
+.category-sec .condo-card{
+  height: 500px; 
+}
 .condo-card .detail h4{ 
   border-bottom: 1px solid #E5E5E5;
   padding-top: 13px;
@@ -1189,7 +1195,7 @@ footer .bot-menu span{
   max-width: 100%;
 }
 .div-map{
-  height: 567px; 
+  height: 500px; 
   margin-top: 30px; 
   border: 10px solid #FFFFFF;
   filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.1));
@@ -1218,6 +1224,7 @@ footer .bot-menu span{
   background-repeat: no-repeat !important;
   background-size: 9.55px 19.1px auto !important;
   z-index: 11;
+  cursor: pointer;
 }
 .map-arr.active{ 
   background: url(../images/right_.png) #4383DF; 
@@ -2410,6 +2417,13 @@ iframe{
 .lSSlideOuter .lSPager.lSpg > li a{
   width: 14px !important;
   height: 14px !important;
+}
+.lSSlideOuter .lSPager.lSpg > li a{
+  
+  background-color: #C4C4C4 !important
+}
+.lSSlideOuter .lSPager.lSpg > li.active a{
+  background-color: #5681BF !important;
 }
 
 
