--- a/css/main.css
+++ b/css/main.css
@@ -2677,15 +2677,20 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   }
   .social-con{ 
     margin-right: 20px; 
-    margin-bottom: 150px; 
+    margin-bottom: 30px; 
     z-index: 111;
     width: 54px;
-    height: 190px;
+    height: 54px;
     border-radius: 10px;
   } 
   .social-con img{  
     width: 35px;
     height: 35px;
+  } 
+  .social-con button{  
+    width: 35px;
+    height: 35px;
+    font-size: 16px;
   } 
   footer{ 
     padding: 25px 20px 45px;
@@ -3241,7 +3246,12 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
     padding-left: 15px !important;
     margin-top: 15px;
   }
- 
+  
+  .lSAction > a{  
+    width: 40px !important;
+    height: 40px !important;  
+    background-size: 11px 20px !important;
+  }
 }
 
 
@@ -3401,5 +3411,8 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   header nav .navbar-nav .nav-item .nav-link{ 
     font-size: 22px;  
   }
+  /* .category-sec .condo-card{  
+    max-width: 400px !important;
+  }  */
 }
   
