--- a/css/main.css
+++ b/css/main.css
@@ -35,17 +35,6 @@
   font-variant:initial;
 }   
    
-   
-@media only screen and (max-width: 991px) { /* MOBILE */
-  .mb-x{
-    display: none !important;
-  } 
-}
-@media only screen and (min-width: 992px) { /* PC */
-  .pc-x{
-    display: none !important;
-  }  
-}
 
 /* transition: .33s all ease-out;  */
 
@@ -941,8 +930,8 @@ footer .bot-menu span{
   right: 0;
   bottom: 0;
   margin-bottom: 60px;
-  width: 68px; 
-  height: 68px;
+  width: 85px; 
+  height: 85px;
   background: rgba(255, 255, 255, 0);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0);
   border-radius: 20px;
@@ -955,8 +944,8 @@ footer .bot-menu span{
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); 
 }
 .social-con img{
-  width: 48px;
-  height: 48px;
+  width: 65px;
+  height: 65px;
   border-radius: 100%;
   margin-bottom: 10px;
   display: none;
@@ -965,8 +954,8 @@ footer .bot-menu span{
   display: block;
 }
 .social-con button{
-  width: 48px;  
-  height: 48px; 
+  width: 65px;  
+  height: 65px; 
   background-color: #1F4D8E;
   border-radius: 100%;
   border: none;
@@ -2402,7 +2391,7 @@ iframe{
   opacity: 1 !important;
   width: 89px !important;
   height: 89px !important; 
-  top: 20% !important;
+  top: calc(50% - 22px ) !important;
 }
 .lSNext{
   background: url(../images/right.png) , rgba(255, 255, 255, 0.6) !important;
@@ -2438,8 +2427,8 @@ iframe{
 
 .owlm2 .owl-nav div{
   position: absolute !important;
-  width: 28px !important;
-  height: 28px !important;
+  width: 48px !important;
+  height: 48px !important;
   background-color: #000000 !important; 
   display: flex;
   align-items: center;
@@ -2455,13 +2444,13 @@ iframe{
 .sec-home7 .lSAction > a{ 
   background-position: center !important;
   background-repeat: no-repeat !important;
-  background-size: 6.5px 13px !important;
+  background-size: 10px 18px !important;
   border-radius: 100%;
   box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
   opacity: 1 !important;
-  width: 28px !important;
-  height: 28px !important; 
-  top: 20% !important;
+  width: 48px !important;
+  height: 48px !important; 
+  top: 30% !important;
 }
 .sec-home7 .lSNext{
   background: url(../images/right2.png) , #000 !important;
@@ -2550,9 +2539,131 @@ iframe{
 }
 .carousel-control-next{
   opacity: 1;
+} 
+#itemx1 .carousel-control-prev{  
+  top: 20% !important;
+  align-items: flex-start;
+} 
+#itemx1 .carousel-control-next{  
+  top: 20% !important;
+  align-items: flex-start;
+} 
+#itemx1 .carousel-control-prev span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/left.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+} 
+#itemx1 .carousel-control-next span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/right.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+}
+
+#itemx2 .carousel-control-prev{  
+  top: 20% !important;
+  align-items: flex-start;
+} 
+#itemx2 .carousel-control-next{  
+  top: 20% !important;
+  align-items: flex-start;
+} 
+#itemx2 .carousel-control-prev span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/left.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+} 
+#itemx2 .carousel-control-next span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/right.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+}
+
+#itemx3 .carousel-control-prev{  
+  top: 20% !important;
+  align-items: flex-start;
+} 
+#itemx3 .carousel-control-next{  
+  top: 20% !important;
+  align-items: flex-start;
+} 
+#itemx3 .carousel-control-prev span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/left.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+} 
+#itemx3 .carousel-control-next span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/right.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
 }
 
 
+#itemx4 .carousel-control-prev{  
+  top: 10% !important;
+  align-items: flex-start;
+} 
+#itemx4 .carousel-control-next{  
+  top: 10% !important;
+  align-items: flex-start;
+} 
+#itemx4 .carousel-control-prev span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/left.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+} 
+#itemx4 .carousel-control-next span{ 
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+  opacity: 1 !important;
+  background: url(../images/right.png) , rgba(255, 255, 255, 0.6) !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: 11px 20px !important; 
+}
 
 /* 
 transition: .33s all ease-out;
@@ -2744,17 +2855,17 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
     margin-right: 20px; 
     margin-bottom: 30px; 
     z-index: 111;
-    width: 54px;
+    width: 64px;
     height: 54px;
     border-radius: 10px;
   } 
   .social-con img{  
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
   } 
   .social-con button{  
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
     font-size: 16px;
   } 
   footer{ 
@@ -3108,7 +3219,7 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   .img-view { 
     margin-top: 30px;
     border-radius: 10px !important;  
-    background-size: auto 100%  !important;
+    background-size:  100% auto  !important;
     height: 250px;
   }
   .label-rent { 
@@ -3371,6 +3482,11 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   .btn-share { 
     top: 60px;
   }
+  .room-feature { 
+    font-size: 12px; 
+    line-height: 30px;
+    margin-bottom: 0px;
+  }
 }
 
 
@@ -3546,4 +3662,16 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
   .category-sec .col-xl-8 .row > .col-xl-4.text-right{
     text-align: left !important;
   }
+}
+
+   
+@media only screen and (max-width: 991px) { /* MOBILE */
+  .mb-x{
+    display: none !important;
+  } 
+}
+@media only screen and (min-width: 992px) { /* PC */
+  .pc-x{
+    display: none !important;
+  }  
 }
