--- a/css/main.css
+++ b/css/main.css
@@ -2464,7 +2464,7 @@ iframe{
   display: block;
   justify-content: center;
   width: 100%;
-  margin-right: 15px !important;
+  margin-right: 10px !important;
 }
 
 
@@ -3486,6 +3486,36 @@ EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
     font-size: 12px; 
     line-height: 30px;
     margin-bottom: 0px;
+  }
+  .carousel-inner .img-cover1{
+    width: 95% !important;
+  }
+  .carousel-inner .img-cover2{
+    width: 95% !important;
+  }
+  
+  
+  #item_box2 .carousel-control-prev span{ 
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 100%;
+    box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+    opacity: 1 !important;
+    background: url(../images/left.png) , rgba(255, 255, 255, 0.6) !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: 11px 20px !important; 
+  } 
+  #item_box2 .carousel-control-next span{ 
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 100%;
+    box-shadow: 0px 10px 20px rgb(0 0 0 / 10%);
+    opacity: 1 !important;
+    background: url(../images/right.png) , rgba(255, 255, 255, 0.6) !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: 11px 20px !important; 
   }
 }
 
