--- a/css/main.css
+++ b/css/main.css
@@ -2536,9 +2536,11 @@ iframe{
 }
 .carousel-control-prev{
   opacity: 1;
+  z-index: 22;
 }
 .carousel-control-next{
   opacity: 1;
+  z-index: 22;
 } 
 #itemx1 .carousel-control-prev{  
   top: 20% !important;
@@ -2738,6 +2740,7 @@ iframe{
 }
 #photo .carousel-item img{
   height: calc(100vh - 150px);
+  padding-bottom: 30px;
 
 }
 .all-viewx .col-4 div{
@@ -2761,7 +2764,113 @@ iframe{
 .modal{
   padding: 0px !important;
 }
-   
+#demo .carousel-inner:hover + .range-img{ 
+  opacity: 1;
+}
+#demo .range-img:hover{ 
+  opacity: 1;
+}
+.range-img{
+  z-index: 111;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  bottom: 100px;
+  opacity: 0;
+}
+.range-img #compress-alt{
+  display: none;
+}
+.range-img #compress-alt.active{
+  display: block;
+}
+.range-img div{ 
+  background: rgba(0, 0, 0, 0.7);
+  height: 36px;
+  width: 200px;
+  padding: 0px 10px;
+  box-sizing: border-box;
+  border-radius: 18px;
+  color: white;
+  position: relative;
+}
+.range-img div:hover{ 
+  background: rgba(0, 0, 0, 1); 
+}
+.range-img div button{ 
+  border: none;
+  outline: none;
+  background: transparent;
+  color: #fff;
+  font-size: 30px;
+  line-height: 26px
+}
+.range-img div input{ 
+  width: 125px;
+  margin-top: 17px;
+  position: absolute;
+}
+.range-img div button#plus{  
+  position: absolute;
+  right: 5px;
+}
+
+input[type="range"] {
+  -webkit-appearance: none; 
+  height: 2px;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 5px; 
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: ew-resize;
+  box-shadow: 0 0 2px 0 #555;
+  transition: background .3s ease-in-out;
+  cursor: pointer;
+}
+
+#compress-alt{
+  position: absolute;
+  margin-left: 255px;
+  background: rgba(0, 0, 0, 0.7);
+  height: 36px;
+  width: 36px;
+  border-radius: 36px;
+  color: #fff;
+  border: none;
+  outline: none;
+}
+#compress-alt:hover{ 
+  background: rgba(0, 0, 0, 1); 
+}
+.modal-header{
+  z-index: 20;
+  background-color: #fff;
+}
+.carousel-inner{
+  overflow: visible;
+  z-index: 11;
+} 
+.carousel-indicators{ 
+  z-index: 11;
+} 
+.des-photo{
+  position: absolute;
+  bottom: -20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+} 
+
+
 /* 
 EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE 
 EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE 
